--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.x
-          #cache: true
+          cache: true
       
       #- name: Cache Docker
       #  uses: actions/cache@v3
