feat: add writing results to console

--- a/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
+++ b/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
@@ -19,6 +19,9 @@
     <None Update="pools.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="pools_light.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
