--- a/Modules/Devices/src/Devices.Infrastructure/Devices.Infrastructure.csproj
+++ b/Modules/Devices/src/Devices.Infrastructure/Devices.Infrastructure.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <PackageReference Include="FirebaseAdmin" Version="3.0.0"/>
+        <PackageReference Include="FirebaseAdmin" Version="3.0.0" />
         <PackageReference Include="JWT" Version="10.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
@@ -14,16 +14,14 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="5.5.0" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="5.5.0" />
-        <PackageReference Include="Polly" Version="8.4.0"/>
+        <PackageReference Include="Polly" Version="8.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
         <ProjectReference Include="..\Devices.Application\Devices.Application.csproj" />
-        <ProjectReference Include="..\Devices.Domain\Devices.Domain.csproj">
-            <TreatAsUsed>true</TreatAsUsed>
-        </ProjectReference>
+        <ProjectReference Include="..\Devices.Domain\Devices.Domain.csproj" />
     </ItemGroup>
 
 </Project>
