chore: adapt appsettings files to new config

--- a/.ci/appsettings.override.postgres.json
+++ b/.ci/appsettings.override.postgres.json
@@ -43,7 +43,11 @@
                     "ConnectionString": "User ID=devices;Password=Passw0rd;Server=postgres;Port=5432;Database=enmeshed;"
                 },
                 "PushNotifications": {
-                    "Provider": "Dummy"
+                    "Providers": {
+                        "dummy": {
+                            "enabled": true
+                        }
+                    }
                 }
             }
         },
