--- a/ConsumerApi/appsettings.override.json
+++ b/ConsumerApi/appsettings.override.json
@@ -1,131 +1,135 @@
 {
-  "RunMigrations": true,
-  "Authentication": {
-    "JwtSigningCertificate": "", // can be empty to use an auto generated development certificate; however, in production scenarios this should definitely be set! Vertical scaling will not work without a fix signing certificate, because each instance would generate its own certificate
-    "JwtLifetimeInSeconds": 300
-  },
-  "Cors": {
-    "AllowedOrigins": "",
-    "ExposedHeaders": ""
-  },
-  "SwaggerUi": {
-    "TokenUrl": "http://localhost:5000/connect/token",
-    "Enabled": true
-  },
-  "Infrastructure": {
-    "EventBus": {
-      "Vendor": "RabbitMQ", // possible values: InMemory, RabbitMQ, GoogleCloud, Azure
-      "ConnectionInfo": "localhost",
+    "RunMigrations": true,
+    "Authentication": {
+        "JwtSigningCertificate": "", // can be empty to use an auto generated development certificate; however, in production scenarios this should definitely be set! Vertical scaling will not work without a fix signing certificate, because each instance would generate its own certificate
+        "JwtLifetimeInSeconds": 300
+    },
+    "Cors": {
+        "AllowedOrigins": "",
+        "ExposedHeaders": ""
+    },
+    "SwaggerUi": {
+        "TokenUrl": "http://localhost:5000/connect/token",
+        "Enabled": true
+    },
+    "Infrastructure": {
+        "EventBus": {
+            "Vendor": "RabbitMQ", // possible values: InMemory, RabbitMQ, GoogleCloud, Azure
+            "ConnectionInfo": "localhost",
 
-      "RabbitMQUsername": "guest", // only available for RabbitMQ
-      "RabbitMQPassword": "guest", // only available for RabbitMQ
-      "ConnectionRetryCount": 5, // only available for RabbitMQ
+            "RabbitMQUsername": "guest", // only available for RabbitMQ
+            "RabbitMQPassword": "guest", // only available for RabbitMQ
+            "ConnectionRetryCount": 5, // only available for RabbitMQ
 
-      "GcpPubSubProjectId": "", // only available for Google Cloud Pub/Sub
-      "GcpPubSubTopicName": "" // only available for Google Cloud Pub/Sub
-    }
-  },
-  "Modules": {
-    "Challenges": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+            "GcpPubSubProjectId": "", // only available for Google Cloud Pub/Sub
+            "GcpPubSubTopicName": "" // only available for Google Cloud Pub/Sub
         }
-      }
     },
-    "Quotas": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
-        }
-      }
-    },
-    "Devices": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+    "Modules": {
+        "Challenges": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
         },
-        "PushNotifications": {
-          "Provider": "Dummy"
-        }
-      }
-    },
-    "Files": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+        "Quotas": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
         },
-        "BlobStorage": {
-          "CloudProvider": "Azure",
-          "ConnectionInfo": "",
-          "ContainerName": ""
+        "Devices": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                },
+                "PushNotifications": {
+                    "Providers": {
+                        "dummy": {
+                            "enabled": true
+                        }
+                    }
+                }
+            }
+        },
+        "Files": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                },
+                "BlobStorage": {
+                    "CloudProvider": "Azure",
+                    "ConnectionInfo": "",
+                    "ContainerName": ""
+                }
+            }
+        },
+        "Messages": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
+        },
+        "Relationships": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
+        },
+        "Synchronization": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
+        },
+        "Tokens": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "Provider": "Postgres",
+                    "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
+                    // "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+                }
+            }
         }
-      }
     },
-    "Messages": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
+    "Logging": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Backbone": "Debug",
+                "Enmeshed": "Debug",
+                "ConsumerApi": "Debug"
+            }
+        },
+        "WriteTo": {
+            "Seq": {
+                "Name": "Seq",
+                "Args": {
+                    "ServerUrl": "http://localhost:5341"
+                }
+            },
+            "Debug": {
+                "Name": "Debug"
+            }
         }
-      }
-    },
-    "Relationships": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
-        }
-      }
-    },
-    "Synchronization": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
-        }
-      }
-    },
-    "Tokens": {
-      "Infrastructure": {
-        "SqlDatabase": {
-          "Provider": "Postgres",
-          "ConnectionString": "User ID=postgres;Password=admin;Server=localhost;Port=5432;Database=enmeshed;" // postgres
-//           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
-        }
-      }
     }
-  },
-  "Logging": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Backbone": "Debug",
-        "Enmeshed": "Debug",
-        "ConsumerApi": "Debug"
-      }
-    },
-    "WriteTo": {
-      "Seq": {
-        "Name": "Seq",
-        "Args": {
-          "ServerUrl": "http://localhost:5341"
-        }
-      },
-      "Debug": {
-        "Name": "Debug"
-      }
-    }
-  }
 }
