--- a/.ci/appsettings.override.sqlserver.json
+++ b/.ci/appsettings.override.sqlserver.json
@@ -43,7 +43,11 @@
                     "ConnectionString": "Server=sqlserver;Database=enmeshed;User Id=devices;Password=Passw0rd;TrustServerCertificate=True"
                 },
                 "PushNotifications": {
-                    "Provider": "Dummy"
+                    "Providers": {
+                        "dummy": {
+                            "enabled": true
+                        }
+                    }
                 }
             }
         },
