Restructure push notification configuration (#683)
* refactor: change configuration in code

* chore: adapt appsettings files to new config

* chore: update config in helm default values

* chore: remove unused Dummy classes

* chore: remove outdated comment from values.yaml

* test: send "dummy" in integration tests

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -541,9 +541,7 @@ global:
             # connectionString - should be set via environment variable
             connectionString: ""
           pushNotifications:
-            # provider - possible values: /"Dummy"/"Direct"
-            provider: ""
-            # directPnsCommunication:
+            providers:
             #   fcm:
             #     # serviceAccounts - the service accounts that should be used to communicate with the FCM service
             #     serviceAccounts:
@@ -572,6 +570,8 @@ global:
             #      bundleId1:
             #         # the name of the key that should be used to communicate with APNs (has to match the name of one of the keys specified above)
             #         keyName: ''
+            #     dummy:
+            #       enabled: false
       files:
         application:
           # pagination - the following options describe the default and maximum page size for the different endpoints
