--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -162,3 +162,32 @@ jobs:
       #  run: |
       #    rm -rf /tmp/.buildx-cache
       #    mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  run-tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: docker-integration-test-postgres
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          check-latest: true
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
+
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Setup NuGet
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.x
+          
+      - name: Install script dependencies
+        run: npm install --prefix ./.ci
+        
+      - name: Run integration tests
+        run: ./.ci/integrationTest.postgres.sh
