--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -20,6 +20,10 @@ jobs:
             tag: admin-ui
           - dockerfile: Modules/Devices/src/Devices.AdminCli/Dockerfile
             tag: seed-client
+          - dockerfile: DatabaseMigrator/Dockerfile
+            tag: database-migrator
+          - dockerfile: EventHandlerService/src/EventHandlerService/Dockerfile
+            tag: event-handler-service
     
     steps:
       - name: Checkout
@@ -178,12 +182,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: 20
-#          check-latest: true
-#          cache: "npm"
-#          cache-dependency-path: "**/package-lock.json"
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          check-latest: true
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
@@ -193,8 +197,8 @@ jobs:
         with:
           dotnet-version: 8.x
           
-#      - name: Install script dependencies
-#        run: npm install --prefix ./.ci
+      - name: Install script dependencies
+        run: npm install --prefix ./.ci
         
       - name: Download Docker images
         uses: actions/download-artifact@v4
@@ -208,6 +212,8 @@ jobs:
           docker load --input /tmp/consumer-api.tar
           docker load --input /tmp/admin-ui.tar
           docker load --input /tmp/seed-client.tar
+          docker load --input /tmp/database-migrator.tar
+          docker load --input /tmp/event-handler-service.tar
       
       - name: Run integration tests
         run: ./.ci/integrationTest.postgres.sh
