--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -106,7 +106,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           tags: ${{ matrix.tag }}
-          load: true
+          load: false
           outputs: type=docker,dest=/tmp/${{ matrix.tag }}.tar
           #outputs: type=registry,dest=localhost:6000/consumer-api
           
@@ -173,11 +173,47 @@ jobs:
       #  run: |
       #    rm -rf /tmp/.buildx-cache
       #    mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      
+  build-solution:
+    name: Build Solution
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          check-latest: true
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
+
+      - name: Setup NuGet
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.x
+
+      - name: Install script dependencies
+        run: npm install --prefix ./.ci
+        
+      - name: Restore Solution
+        run: dotnet restore "Backbone.sln"
+        
+      - name: Build Solution
+        run: dotnet build --no-restore "Backbone.sln"
+        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with: 
+          name: solution
+          path: ./
 
   run-tests:
     name: Run tests
     runs-on: ubuntu-latest
-    needs: docker-integration-test-postgres
+    needs:
+      - docker-integration-test-postgres
+      - build-solution
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -207,6 +243,12 @@ jobs:
           pattern: docker-*
           merge-multiple: true
           
+      - name: Download Built solution
+        uses: actions/download-artifact@v4
+        with:
+          name: solution
+          path: .
+      
       - name: Load Docker images
         run: |
           docker load --input /tmp/consumer-api.tar
