--- a/SseServer/appsettings.json
+++ b/SseServer/appsettings.json
@@ -1,3 +1,42 @@
 {
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Modules": {
+        "Challenges": {},
+        "Quotas": {
+            "Application": {
+                "Pagination": {
+                    "DefaultPageSize": 50,
+                    "MaxPageSize": 200
+                }
+            }
+        },
+        "Devices": {
+            "Application": {
+                "AddressPrefix": "id1",
+                "Pagination": {
+                    "DefaultPageSize": 50,
+                    "MaxPageSize": 200
+                }
+            }
+        }
+    },
+    "Logging": {
+        "MinimumLevel": {
+            "Default": "Warning",
+            "Override": {
+                "Backbone": "Information",
+
+                "Microsoft": "Information",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": {
+            "Console": {
+                "Name": "Console",
+                "Args": {
+                    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+                }
+            }
+        }
+    }
 }
