--- a/SseServer/SseServer.csproj
+++ b/SseServer/SseServer.csproj
@@ -1,14 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4"/>
+        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.21.0"/>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="8.0.2"/>
+        <PackageReference Include="Serilog" Version="3.1.1"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
+        <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="2.0.3"/>
+        <PackageReference Include="Serilog.Enrichers.Demystifier" Version="1.0.2"/>
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0"/>
+        <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
+        <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0"/>
+        <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Http" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Seq" Version="7.0.1"/>
+    </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
+        <ProjectReference Include="..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj"/>
+        <ProjectReference Include="..\Modules\Devices\src\Devices.ConsumerApi\Devices.ConsumerApi.csproj"/>
     </ItemGroup>
 
 </Project>
