--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -180,7 +180,7 @@ jobs:
   run-tests:
     name: Run tests
     runs-on: ubuntu-latest
-    needs: docker-integration-test-postgres
+    needs: container-test-builds
     steps:
       - name: Checkout
         uses: actions/checkout@v4
