chore: enable SSE for local development

--- a/ConsumerApi/appsettings.override.json
+++ b/ConsumerApi/appsettings.override.json
@@ -56,13 +56,9 @@
                         "dummy": {
                             "enabled": true
                         },
-                        "apns": {
-                            
-                        },
-                        "fcm": {
-                        },
                         "sse": {
-                            "enabled": true
+                            "enabled": true,
+                            "SseServerBaseAddress": "http://localhost:8083"
                         }
                     }
                 }
