--- a/EventHandlerService/src/EventHandlerService/appsettings.override.json
+++ b/EventHandlerService/src/EventHandlerService/appsettings.override.json
@@ -42,6 +42,10 @@
                     "Providers": {
                         "dummy": {
                             "enabled": true
+                        },
+                        "sse": {
+                            "enabled": true,
+                            "SseServerBaseAddress": "http://localhost:8083"
                         }
                     }
                 }
