--- a/Modules/Devices/test/Devices.Infrastructure.Tests/Devices.Infrastructure.Tests.csproj
+++ b/Modules/Devices/test/Devices.Infrastructure.Tests/Devices.Infrastructure.Tests.csproj
@@ -26,4 +26,8 @@
 		<ProjectReference Include="..\..\src\Devices.Infrastructure\Devices.Infrastructure.csproj" />
 	</ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Tests\PushNotifications\Connectors\Sse\"/>
+    </ItemGroup>
+
 </Project>
