--- a/BuildingBlocks/src/UnitTestTools/UnitTestTools.csproj
+++ b/BuildingBlocks/src/UnitTestTools/UnitTestTools.csproj
@@ -3,6 +3,7 @@
     <ItemGroup>
         <PackageReference Include="FakeItEasy" Version="8.2.0"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
+        <PackageReference Include="FluentAssertions.Json" Version="6.1.0"/>
         <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
