--- a/SseServer/src/SseServer/SseServer.csproj
+++ b/SseServer/src/SseServer/SseServer.csproj
@@ -19,9 +19,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
-        <ProjectReference Include="..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj"/>
-        <ProjectReference Include="..\Modules\Devices\src\Devices.ConsumerApi\Devices.ConsumerApi.csproj"/>
+        <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj"/>
+        <ProjectReference Include="..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj"/>
+        <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.ConsumerApi\Devices.ConsumerApi.csproj"/>
     </ItemGroup>
 
 </Project>
