--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -165,7 +165,7 @@ jobs:
           PUSH: 1
 
   publish-identity-deletion-jobs:
-    name: Publish Identity Deletion Jobs Image
+    name: Publish Identity Deletion Jobs Container Image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -191,6 +191,37 @@ jobs:
           endpoint: "jssoft/js-soft"
       - name: Build and Push Container Image
         run: ./.ci/idj/buildContainerImage.js
+        env:
+          TAG: ${{ github.ref_name }}
+          PUSH: 1
+
+  publish-sse-server:
+    name: Publish SSE Server Container Image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install script dependencies
+        run: npm install --prefix ./.ci
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to Docker Hub for accessing the cloud builder
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.CLOUD_BUILDER_USERNAME }}
+          password: ${{ secrets.CLOUD_BUILDER_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: "lab:latest"
+          driver: cloud
+          endpoint: "jssoft/js-soft"
+      - name: Build and Push Container Image
+        run: ./.ci/sses/buildContainerImage.js
         env:
           TAG: ${{ github.ref_name }}
           PUSH: 1
