--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -297,6 +297,22 @@ jobs:
           TAG: test
           PLATFORMS: linux/amd64
 
+  build-sses-container-image:
+    name: Build SSE Server Container Image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install script dependencies
+        run: npm install --prefix ./.ci
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build image
+        run: ./.ci/sses/buildContainerImage.js
+        env:
+          TAG: test
+          PLATFORMS: linux/amd64
+
   build-fsc-container-image:
     name: Build Files Sanity Check Container Image
     runs-on: ubuntu-latest
