--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-${{ matrix.tag }}-cache
-          key: buildx-${{ matrix.tag }}-cache-${{ hashFiles('${{matrix.dockerfile}}') }}
+          key: buildx-${{ matrix.tag }}-cache-${{ hashFiles(matrix.dockerfile) }}
           restore-keys: |
             buildx-${{ matrix.tag }}-cache-
 
