--- a/helm/templates/sseserver/ingress.yaml
+++ b/helm/templates/sseserver/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if eq ((((.Values.global.configuration.modules.devices.infrastructure).pushNotifications).providers).sse).enabled true }}
 {{- if .Values.sseserver.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -23,4 +24,5 @@ spec:
                 name: {{ .Values.sseserver.name }}
                 port:
                   number: 8080   
+{{- end }}
 {{- end }}
