--- a/EventHandlerService/src/EventHandlerService/appsettings.override.json
+++ b/EventHandlerService/src/EventHandlerService/appsettings.override.json
@@ -101,5 +101,26 @@
                 }
             }
         }
+    },
+    "Logging": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Backbone": "Debug",
+                "Enmeshed": "Debug",
+                "ConsumerApi": "Debug"
+            }
+        },
+        "WriteTo": {
+            "Seq": {
+                "Name": "Seq",
+                "Args": {
+                    "ServerUrl": "http://localhost:5341"
+                }
+            },
+            "Debug": {
+                "Name": "Debug"
+            }
+        }
     }
 }
