fix: remove addressPrefix config and add instanceUrl instead

--- a/ConsumerApi/appsettings.override.json
+++ b/ConsumerApi/appsettings.override.json
@@ -45,6 +45,9 @@
             }
         },
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
