--- a/EventHandlerService/src/EventHandlerService/appsettings.override.json
+++ b/EventHandlerService/src/EventHandlerService/appsettings.override.json
@@ -32,6 +32,9 @@
             }
         },
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
