--- a/docker-compose/consumerapi.appsettings.override.json
+++ b/docker-compose/consumerapi.appsettings.override.json
@@ -44,6 +44,9 @@
             }
         },
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
