refactor: extract Distributors and add offsets for sent vs received messages

--- a/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
+++ b/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\ConsumerApi.Sdk\ConsumerApi.Sdk.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
