--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package.json"
       - name: Cache npm dependencies
@@ -75,8 +74,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package.json"
       - name: Cache npm dependencies
@@ -127,8 +125,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
@@ -200,8 +197,7 @@ jobs:
       
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
           
@@ -254,8 +250,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
@@ -321,7 +316,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
-      - name: Download Docker images
+      - name: Download cached Docker images
         uses: actions/download-artifact@v4
         with:
           path: /tmp
@@ -385,8 +380,7 @@ jobs:
       
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          check-latest: true
+          node-version: latest
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
